--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -10,6 +10,7 @@
   </ion-refresher>
   <h3>Identities</h3>
   <button ion-button secondary (click)="createKey()">Create</button>
+  <button ion-button secondary (click)="signinCode()">Signin code</button>
   <button ion-button secondary (click)="importKey()">Import</button>
   <ion-list>
     <ion-item button (click)="selectIdentity(key.username)" *ngFor="let key of keys">
