add replies, topic restrictions, ux improvements

--- a/src/app/communities/communities.page.html
+++ b/src/app/communities/communities.page.html
@@ -13,10 +13,11 @@
     <ng-container *ngFor="let static_group of settingsService.static_groups">
       <h1>{{static_group.relationship.their_username}}</h1>
       <app-post-button [staticGroup]="static_group"></app-post-button>
-      <app-group-card-list
+      <app-post-card-list
         [rootGroup]="rootGroup"
         *ngFor="let rootGroup of groups[static_group.rid]"
-      ></app-group-card-list>
+        listType="group"
+      ></app-post-card-list>
     </ng-container>
   </ion-list>
 </ion-content>
