--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,4 @@
-<ion-card *ngIf="cardType == 'topic'">
+<ion-card *ngIf="cardType == 'topic' && item.relationship" (click)="isolateCard()">
   <ion-card-header>
     <ion-card-subtitle>{{item.fee}} YADA - {{item.time}}</ion-card-subtitle>
     <ion-card-title>
@@ -11,12 +11,24 @@
     <app-vote [item]="item" [votes]="votes" [parentComponent]="parentComponent"></app-vote>
   </ion-card-content>
 </ion-card>
-<ion-card *ngIf="cardType == 'group'">
+<ion-card *ngIf="cardType == 'group' && item.relationship" (click)="isolateCard()">
   <ion-card-header>
     <ion-card-subtitle>{{item.fee}} YADA - {{item.time}}</ion-card-subtitle>
     <ion-card-title (click)="viewProfile(item)">
         <a href="#" (click)="viewProfile(item)">{{item.relationship.my_username || 'Anonymous'}}</a> talking about 
         <a href="#" (click)="openTopic(topic)">{{item.relationship.topic_their_username}}</a>
+    </ion-card-title>
+  </ion-card-header>
+  <ion-card-content>
+    {{item.relationship.groupChatText || 'Anonymous'}}
+    <app-vote [item]="item" [votes]="votes" [parentComponent]="parentComponent"></app-vote>
+  </ion-card-content>
+</ion-card>
+<ion-card *ngIf="cardType == 'replies' && item.relationship" (click)="isolateCard()">
+  <ion-card-header>
+    <ion-card-subtitle>{{item.fee}} YADA - {{item.time}}</ion-card-subtitle>
+    <ion-card-title (click)="viewProfile(item)">
+        <a href="#" (click)="viewProfile(item)">{{item.relationship.my_username || 'Anonymous'}}</a> responded
     </ion-card-title>
   </ion-card-header>
   <ion-card-content>
