--- a/src/app/friends/friends.page.html
+++ b/src/app/friends/friends.page.html
@@ -5,15 +5,11 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-refresher (ionRefresh)="refresh($event)" slot="fixed">
-    <ion-refresher-content></ion-refresher-content>
-  </ion-refresher>
-  <ion-spinner *ngIf="loading"></ion-spinner>
   <div *ngIf="items && items.length == 0">
       No items to display.
   </div>
   <ion-list>
-    <ion-item button *ngFor="let item of items" (click)="itemTapped($event, item)">
+    <ion-item button *ngFor="let item of items">
       <span>{{item.transaction.relationship.their_username}}</span>
     </ion-item>
   </ion-list>
