make groups and topics clickable, enhance routing UX

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,14 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-header>
         <ion-toolbar>
-          <ion-title>Menu</ion-title>
+          <ion-title>Secret project: <a href="https://www.youtube.com/watch?v=HQjfhOqthv0" target="_blank">Kintanti</a></ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
         <ion-list *ngIf="settingsService.remoteSettings.baseUrl">
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
             <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
+              <ion-icon slot="start" [src]="p.icon"></ion-icon>
               <ion-label>
                 {{p.title}}
               </ion-label>
@@ -20,7 +20,7 @@
         <ion-list *ngIf="!settingsService.remoteSettings.baseUrl">
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPage">
             <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
+              <ion-icon slot="start" [src]="p.icon"></ion-icon>
               <ion-label>
                 {{p.title}}
               </ion-label>
