--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-header>
         <ion-toolbar>
-          <ion-title>Secret project: <a href="https://www.youtube.com/watch?v=HQjfhOqthv0" target="_blank">Kintanti</a></ion-title>
+          <ion-title><a href="https://www.youtube.com/watch?v=HQjfhOqthv0" target="_blank">Kintanti</a></ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
