--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,38 +1,98 @@
 <ion-card *ngIf="cardType == 'topic' && item.relationship" (click)="isolateCard($event)">
   <ion-card-header>
-    <ion-card-subtitle>{{item.fee}} YADA - {{item.time}}</ion-card-subtitle>
     <ion-card-title>
       {{item.relationship.my_username || 'Anonymous'}} from 
       <a href="#" (click)="gotoGroup($event, item)">{{item.relationship.their_username}}</a>
     </ion-card-title>
+    <ion-card-subtitle>{{item.fee}} YADA - {{item.time}}</ion-card-subtitle>
   </ion-card-header>
   <ion-card-content>
-    {{item.relationship.groupChatText || 'Anonymous'}}
-    <app-vote [item]="item" [votes]="votes" [parentComponent]="parentComponent"></app-vote>
+    <div>{{item.relationship.groupChatText || 'Anonymous'}}</div>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6">
+          <app-vote
+          [item]="item"
+          [votes]="votes"
+          [parentComponent]="parentComponent"
+          ></app-vote>
+        </ion-col>
+        <ion-col size="2">
+          <app-post-button
+            *ngIf="topic && group"
+            [topic]="topic"
+            [group]="group"
+            [post]="item"
+            [staticGroup]="staticGroup"
+            [parentComponent]="thisComponent"
+          ></app-post-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-card-content>
 </ion-card>
 <ion-card *ngIf="cardType == 'group' && item.relationship" (click)="isolateCard($event)">
   <ion-card-header>
-    <ion-card-subtitle>{{item.fee}} YADA - {{item.time}}</ion-card-subtitle>
     <ion-card-title>
         {{item.relationship.my_username || 'Anonymous'}} talking about 
         <a href="#" (click)="gotoTopic($event, item)">{{item.relationship.topic_their_username}}</a>
     </ion-card-title>
+    <ion-card-subtitle>{{item.fee}} YADA - {{item.time}}</ion-card-subtitle>
   </ion-card-header>
   <ion-card-content>
-    {{item.relationship.groupChatText || 'Anonymous'}}
-    <app-vote [item]="item" [votes]="votes" [parentComponent]="parentComponent"></app-vote>
+    <div>{{item.relationship.groupChatText || 'Anonymous'}}</div>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6">
+          <app-vote
+          [item]="item"
+          [votes]="votes"
+          [parentComponent]="parentComponent"
+          ></app-vote>
+        </ion-col>
+        <ion-col size="2">
+          <app-post-button
+            *ngIf="topic && group"
+            [topic]="topic"
+            [group]="group"
+            [post]="item"
+            [staticGroup]="staticGroup"
+            [parentComponent]="thisComponent"
+          ></app-post-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-card-content>
 </ion-card>
 <ion-card *ngIf="cardType == 'replies' && item.relationship" (click)="isolateCard($event)">
   <ion-card-header>
-    <ion-card-subtitle>{{item.fee}} YADA - {{item.time}}</ion-card-subtitle>
     <ion-card-title>
         {{item.relationship.my_username || 'Anonymous'}} responded
     </ion-card-title>
+    <ion-card-subtitle>{{item.fee}} YADA - {{item.time}}</ion-card-subtitle>
   </ion-card-header>
   <ion-card-content>
-    {{item.relationship.groupChatText || 'Anonymous'}}
-    <app-vote [item]="item" [votes]="votes" [parentComponent]="parentComponent"></app-vote>
+    <div>{{item.relationship.groupChatText || 'Anonymous'}}</div>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6">
+          <app-vote
+          [item]="item"
+          [votes]="votes"
+          [parentComponent]="parentComponent"
+          ></app-vote>
+        </ion-col>
+        <ion-col size="2">
+          <app-post-button
+            *ngIf="topic && group"
+            [topic]="topic"
+            [group]="group"
+            [post]="item"
+            [staticGroup]="staticGroup"
+            [parentComponent]="thisComponent"
+          ></app-post-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-card-content>
 </ion-card>
