--- a/src/app/post-button/post-button.component.html
+++ b/src/app/post-button/post-button.component.html
@@ -1,6 +1,6 @@
-<ion-item button (click)="modal()" color="primary" *ngIf="!post">
+<ion-button (click)="modal()" color="primary" *ngIf="!post">
   <ion-icon src="/appvotestatic/svg/md-create.svg" primary></ion-icon> Create {{staticGroup.relationship.their_username.toLowerCase()}} post
-</ion-item>
-<ion-item button (click)="modal()" color="primary" *ngIf="post">
+</ion-button>
+<ion-button (click)="modal()" color="primary" *ngIf="post" fill="outline">
   <ion-icon src="/appvotestatic/svg/md-create.svg" primary></ion-icon> Reply
-</ion-item>
+</ion-button>
