--- a/src/app/post-card-list/post-card-list.component.html
+++ b/src/app/post-card-list/post-card-list.component.html
@@ -1,11 +1,17 @@
 <ion-list lines="none" *ngIf="posts && posts.length > 0">
-  <h1>{{rootGroup.transaction.relationship.their_username}}</h1>
+  <h1 *ngIf="listType !== 'replies'">{{rootGroup.transaction.relationship.their_username}}</h1>
+  <h1 *ngIf="listType === 'replies'">Replies</h1>
   <ion-row *ngFor="let topic of posts">
     <div class="scrolling-wrapper-flexbox" scrollX="true">
       <div scrollX="true" direction="x" *ngFor="let item of topic.chats" class="card">
-        <ion-col col-4>
-          <app-card [cardType]="listType" [item]="item" [votes]="votes" [topic]="topic" [parentComponent]="parentComponent"></app-card>
-        </ion-col>
+        <app-card
+          [cardType]="listType"
+          [item]="item"
+          [votes]="votes"
+          [topic]="topic"
+          [parentComponent]="parentComponent"
+          [staticGroup]="rootGroup"
+        ></app-card>
       </div>
     </div>
   </ion-row>
