--- a/src/app/post-card-list/post-card-list.component.scss
+++ b/src/app/post-card-list/post-card-list.component.scss
@@ -17,12 +17,21 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 10px;
+    border-radius: 0px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: whitesmoke; 
-    border-radius: 10px;
+    border-radius: 0px;
+}
+
+ion-list {
+    width: 100%;
+}
+ion-row {
+    width: 100%;
+}
+ion-row > div {
+    width: 100%;
 }
