--- a/src/app/post-form/post-form.component.html
+++ b/src/app/post-form/post-form.component.html
@@ -1,7 +1,20 @@
-<ion-button (click)="closeModal()">
-  <ion-icon slot="icon-only" src="/appvotestatic/svg/md-arrow-back.svg"></ion-icon>
-</ion-button>
-<textarea [mentionConfig]="mentionConfig" (keyup)="change()" (searchTerm)="search($event)" [(ngModel)]="groupChatText"></textarea>
-<span>You must specify a single #topic. Topics must be prefixed with a hash symbol "#" and greater than four characters. You must also specify a single :group alliance. Which side are you on? Groups are prefixed with a colon symbol ":" and greater than four characters. Example: I am a :diver and I'm talking about #iswaterwet</span>
-<span *ngIf="topic && group">I identify with {{group.relationship.their_username}} and I'm talking about {{topic.relationship.their_username}}</span>
-<ion-item button (click)="submit()">Submit</ion-item>
+<ion-content class="ion-padding">
+  <ion-textarea
+   placeholder="What's on your mind? 'Identify as a :turtle and I'm talking about #turtles and I think other turtles need to come out of their shell!''"
+   [mentionConfig]="mentionConfig"
+   (keyup)="change()"
+   (searchTerm)="search($event)"
+   [(ngModel)]="groupChatText"
+   maxlength="280"
+   rows="25"
+  ></ion-textarea>
+  <ion-button (click)="closeModal()" class="back" fill="outline">
+    <ion-icon slot="icon-only" src="/appvotestatic/svg/md-arrow-back.svg"></ion-icon>&nbsp;Back
+  </ion-button>
+  <ion-button button (click)="submit()" class="post" fill="outline">
+      <ion-icon slot="icon-only" src="/appvotestatic/svg/md-create.svg"></ion-icon>&nbsp;Post
+  </ion-button>
+  <ul>
+    <li *ngIf="topic && group">I identify with {{group.relationship.their_username}} and I'm talking about {{topic.relationship.their_username}}</li>
+  </ul>
+</ion-content>
