--- a/src/app/post/post.page.html
+++ b/src/app/post/post.page.html
@@ -1,24 +1,24 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>post</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-menu-toggle>
+            <ion-button>
+              <ion-icon src='/appvotestatic/svg/md-menu.svg'></ion-icon>
+            </ion-button>
+          </ion-menu-toggle>
+        </ion-buttons>
+        <ion-title>Post</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
 <ion-content class="ion-padding">
   <app-card
+    *ngIf="item.id"
     [item]="item"
     [cardType]="cardType"
     [votes]="votes"
     [parentComponent]="thisComponent"
   ></app-card>
-  <app-post-button
-    *ngIf="topic && group"
-    [topic]="topic"
-    [group]="group"
-    [post]="item"
-    [staticGroup]="staticGroup"
-    [parentComponent]="thisComponent"
-  ></app-post-button>
   <app-post-card-list
     *ngIf="transaction.transaction && transaction.transaction.posts"
     [rootGroup]="transaction"
