--- a/src/app/topics/topics.page.html
+++ b/src/app/topics/topics.page.html
@@ -1,6 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>topics</ion-title>
+      <ion-buttons slot="start">
+        <ion-menu-toggle>
+          <ion-button>
+            <ion-icon src='/appvotestatic/svg/md-menu.svg'></ion-icon>
+          </ion-button>
+        </ion-menu-toggle>
+      </ion-buttons>
+      <ion-title *ngIf="!params.id">Trending topics</ion-title>
+      <ion-title *ngIf="params.id">Topic</ion-title>
   </ion-toolbar>
 </ion-header>
 
