--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -1,6 +1,8 @@
-<ion-segment color="danger" scrollable (click)="segmentChanged($event, item)" [(ngModel)]="item.vote">
-  <ion-segment-button layout="icon-end" value="upvote">
-    <ion-icon name="heart" src="/appvotestatic/svg/md-heart.svg"></ion-icon>
-    <ion-label>{{votes[item.id]}}</ion-label>
-  </ion-segment-button>
-</ion-segment>
+<ion-button expand="block" value="upvote" (click)="segmentChanged($event, item)" fill="outline" *ngIf="!item.alreadyVoted">
+  <ion-icon src="/appvotestatic/svg/md-heart.svg"></ion-icon>&nbsp;
+  <ion-label>{{votes[item.id]}}</ion-label>
+</ion-button>
+<ion-button expand="block" value="upvote" (click)="segmentChanged($event, item)" *ngIf="item.alreadyVoted">
+  <ion-icon src="/appvotestatic/svg/md-heart.svg"></ion-icon>&nbsp;
+  <ion-label>{{votes[item.id]}}</ion-label>
+</ion-button>
