--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -15,16 +15,13 @@
       <ion-row>
         <ion-col size="6">
           <app-vote
-          [item]="item"
-          [votes]="votes"
-          [parentComponent]="parentComponent"
+            [item]="item"
+            [votes]="item.votes"
+            [parentComponent]="parentComponent"
           ></app-vote>
         </ion-col>
         <ion-col size="2">
           <app-post-button
-            *ngIf="topic && group"
-            [topic]="topic"
-            [group]="group"
             [post]="item"
             [staticGroup]="staticGroup"
             [parentComponent]="thisComponent"
@@ -51,16 +48,13 @@
       <ion-row>
         <ion-col size="6">
           <app-vote
-          [item]="item"
-          [votes]="votes"
-          [parentComponent]="parentComponent"
+            [item]="item"
+            [votes]="item.votes"
+            [parentComponent]="parentComponent"
           ></app-vote>
         </ion-col>
         <ion-col size="2">
           <app-post-button
-            *ngIf="topic && group"
-            [topic]="topic"
-            [group]="group"
             [post]="item"
             [staticGroup]="staticGroup"
             [parentComponent]="thisComponent"
@@ -86,16 +80,13 @@
       <ion-row>
         <ion-col size="6">
           <app-vote
-          [item]="item"
-          [votes]="votes"
-          [parentComponent]="parentComponent"
+            [item]="item"
+            [votes]="item.votes"
+            [parentComponent]="parentComponent"
           ></app-vote>
         </ion-col>
         <ion-col size="2">
           <app-post-button
-            *ngIf="topic && group"
-            [topic]="topic"
-            [group]="group"
             [post]="item"
             [staticGroup]="staticGroup"
             [parentComponent]="thisComponent"
